--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Things I will buy with my salary</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Noise-Cancelling Headphones</li>
+    </ol>
+
+    <h2>Holiday destinations I want to visit</h2>
+    <ul>
+        <li data-ns-test="holidayList">Dwaraka</li>
+        <li data-ns-test="holidayList">Arunachalam</li>
+        <li data-ns-test="holidayList">Kashmir</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
